--- a/style/style.css
+++ b/style/style.css
@@ -56,6 +56,7 @@ header > p {
     font-size: 1.2em;
     color: white;
     max-width: 600px;
+    margin: auto;
     padding: 0px 10px 0px 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315)
 }
