--- a/style/style.css
+++ b/style/style.css
@@ -22,6 +22,7 @@
 }
 
 * {
+    box-sizing: border-box;
     margin: 0px;
     padding: 0px;
 }
@@ -40,7 +41,6 @@ header {
     min-height: 150px;
     text-align: center;
     padding-top: 40px;
-    margin: auto;
 }
 
 header > h1 {
@@ -57,6 +57,7 @@ header > p {
     font-size: 1.2em;
     color: white;
     max-width: 600px;
+    margin: auto;
     padding: 0px 10px 0px 10px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.315)
 }
